--- a/app/src/main/res/layout/header_layout.xml
+++ b/app/src/main/res/layout/header_layout.xml
@@ -19,6 +19,7 @@
 
         <ProgressBar
             android:id="@+id/head_pb"
+            android:indeterminateDrawable="@drawable/shape_progress"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </FrameLayout>
